--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
     <!-- build:js scripts/app.js -->
     <!-- inject:js -->
     <script src="main/main.js"></script>
+    <script src="main/services/places-serv.js"></script>
     <script src="main/services/main-serv.js"></script>
     <script src="main/controllers/menu-ctrl.js"></script>
     <script src="main/controllers/list-ctrl.js"></script>
