--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
     <title>memorable</title>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDoSIBBercZO1uo0eMS-xXGe8TirOD-f7Q&sensor=true"></script>
+
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/ionic/release/css/ionic.css" />
@@ -54,6 +56,7 @@
     <script src="main/services/places-serv.js"></script>
     <script src="main/services/main-serv.js"></script>
     <script src="main/controllers/menu-ctrl.js"></script>
+    <script src="main/controllers/list-detail-ctrl.js"></script>
     <script src="main/controllers/list-ctrl.js"></script>
     <script src="main/controllers/home-ctrl.js"></script>
     <script src="main/controllers/debug-ctrl.js"></script>
