--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -11,6 +11,8 @@
     <title>memorable</title>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDoSIBBercZO1uo0eMS-xXGe8TirOD-f7Q&sensor=true"></script>
+
     <link rel="stylesheet" href="styles/vendor.css">
 
     <link rel="stylesheet" href="main/styles/app.css">
